--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "ef30b118",
+   "execution_count": 46,
+   "id": "7da28707",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Splinter and BeautifulSoup\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as soup\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "80c81278",
+   "execution_count": 47,
+   "id": "fd44e54d",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cf399985",
+   "id": "c954821b",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6ac11658",
+   "id": "684eeb68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "bc09a69b",
+   "id": "8befbdf7",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "862a49ea",
+   "id": "0ce043a8",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e6c3b983",
+   "id": "17ac0bc7",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09803f92",
+   "id": "01dad690",
    "metadata": {},
    "source": [
     "### Featured Images"
@@ -152,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "cc739cdd",
+   "id": "f9d64f58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2c010f93",
+   "id": "952fad80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "8e809976",
+   "id": "9e833c57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "dffbfb66",
+   "id": "7cd3bcd7",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c589323c",
+   "id": "ea850de1",
    "metadata": {},
    "outputs": [
     {
@@ -232,8 +233,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "id": "3651fad2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mars</th>\n",
+       "      <th>Earth</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>description</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Mars - Earth Comparison</th>\n",
+       "      <td>Mars</td>\n",
+       "      <td>Earth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Diameter:</th>\n",
+       "      <td>6,779 km</td>\n",
+       "      <td>12,742 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mass:</th>\n",
+       "      <td>6.39 × 10^23 kg</td>\n",
+       "      <td>5.97 × 10^24 kg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Moons:</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Distance from Sun:</th>\n",
+       "      <td>227,943,824 km</td>\n",
+       "      <td>149,598,262 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Length of Year:</th>\n",
+       "      <td>687 Earth days</td>\n",
+       "      <td>365.24 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Temperature:</th>\n",
+       "      <td>-87 to -5 °C</td>\n",
+       "      <td>-88 to 58°C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    Mars            Earth\n",
+       "description                                              \n",
+       "Mars - Earth Comparison             Mars            Earth\n",
+       "Diameter:                       6,779 km        12,742 km\n",
+       "Mass:                    6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "Moons:                                 2                1\n",
+       "Distance from Sun:        227,943,824 km   149,598,262 km\n",
+       "Length of Year:           687 Earth days      365.24 days\n",
+       "Temperature:                -87 to -5 °C      -88 to 58°C"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
+    "df.columns=['description', 'Mars', 'Earth']\n",
+    "df.set_index('description', inplace=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "760c14af",
+   "id": "2a2cf0ae",
    "metadata": {},
    "outputs": [],
    "source": []
