--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -183,6 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Parse the resulting html with soup\n",
     "html = browser.html\n",
     "img_soup = soup(html, 'html.parser')"
    ]
