--- a/app.ipynb
+++ b/app.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "f633b34b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - \n",
-      "\n",
-      "[WDM] - ====== WebDriver manager ======\n",
-      "[WDM] - Current google-chrome version is 94.0.4606\n",
-      "[WDM] - Get LATEST driver version for 94.0.4606\n",
-      "[WDM] - Get LATEST driver version for 94.0.4606\n",
-      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_mac64.zip\n",
-      "[WDM] - Driver has been saved in cache [/Users/josephmarrujo/.wdm/drivers/chromedriver/mac64/94.0.4606.61]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from flask import Flask, render_template, redirect, url_for\n",
     "from flask_pymongo import PyMongo\n",
@@ -29,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "216bd4aa",
    "metadata": {},
    "outputs": [],
@@ -40,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "3be1e787",
    "metadata": {},
    "outputs": [],
@@ -52,10 +37,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "40a3f7f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app '__main__' (lazy loading)\n",
+      " * Environment: production\n",
+      "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
+      "\u001b[2m   Use a production WSGI server instead.\u001b[0m\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n"
+     ]
+    }
+   ],
    "source": [
     "@app.route(\"/\")\n",
     "def index():\n",
@@ -76,10 +80,12 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "006d01ff1a7f35c34f0586e54e9b24c5bbf47369eb01d100606e70fd61c4f441"
+  },
   "kernelspec": {
-   "display_name": "PythonData",
-   "language": "python",
-   "name": "pythondata"
+   "display_name": "Python 3.7.11 64-bit ('pythondata': conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
