--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA's Mars 2020 Rover Tests Descent-Stage Separation</div>"
+       "<div class=\"content_title\">Mars InSight Lander to Push on Top of the 'Mole'</div>"
       ]
      },
      "execution_count": 5,
@@ -107,7 +107,7 @@
     {
      "data": {
       "text/plain": [
-       "\"NASA's Mars 2020 Rover Tests Descent-Stage Separation\""
+       "\"Mars InSight Lander to Push on Top of the 'Mole'\""
       ]
      },
      "execution_count": 6,
@@ -130,7 +130,7 @@
     {
      "data": {
       "text/plain": [
-       "\"A crane lifts the rocket-powered descent stage away from NASA's Mars 2020 rover after technicians tested the pyrotechnic charges that separate the two spacecraft.\""
+       "'Engineers have a plan for pushing down on the heat probe, which has been stuck at the Martian surface for a year.'"
       ]
      },
      "execution_count": 7,
@@ -197,7 +197,7 @@
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars2.jpg'"
+       "'image/featured/mars3.jpg'"
       ]
      },
      "execution_count": 11,
@@ -220,7 +220,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
       ]
      },
      "execution_count": 12,
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "3651fad2",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
        "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "2a2cf0ae",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "bd1645ab",
    "metadata": {},
    "outputs": [],
