--- a/app.ipynb
+++ b/app.ipynb
@@ -84,8 +84,7 @@
    "hash": "006d01ff1a7f35c34f0586e54e9b24c5bbf47369eb01d100606e70fd61c4f441"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3.7.11 64-bit ('pythondata': conda)",
    "name": "python3"
   },
   "language_info": {
