--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "id": "7da28707",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "id": "fd44e54d",
    "metadata": {},
    "outputs": [
@@ -27,11 +27,9 @@
       "[WDM] - \n",
       "\n",
       "[WDM] - ====== WebDriver manager ======\n",
-      "[WDM] - Current google-chrome version is 94.0.4606\n",
-      "[WDM] - Get LATEST driver version for 94.0.4606\n",
-      "[WDM] - Get LATEST driver version for 94.0.4606\n",
-      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_mac64.zip\n",
-      "[WDM] - Driver has been saved in cache [/Users/josephmarrujo/.wdm/drivers/chromedriver/mac64/94.0.4606.61]\n"
+      "[WDM] - Current google-chrome version is 95.0.4638\n",
+      "[WDM] - Get LATEST driver version for 95.0.4638\n",
+      "[WDM] - Driver [/Users/josephmarrujo/.wdm/drivers/chromedriver/mac64/95.0.4638.54/chromedriver] found in cache\n"
      ]
     }
    ],
@@ -42,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "id": "c954821b",
    "metadata": {},
    "outputs": [
@@ -52,7 +50,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 67,
    "id": "684eeb68",
    "metadata": {},
    "outputs": [],
@@ -79,17 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 68,
    "id": "8befbdf7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">Mars InSight Lander to Push on Top of the 'Mole'</div>"
+       "<div class=\"content_title\">Mars Helicopter Attached to NASA's Perseverance Rover</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,17 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 69,
    "id": "0ce043a8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Mars InSight Lander to Push on Top of the 'Mole'\""
+       "\"Mars Helicopter Attached to NASA's Perseverance Rover\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,17 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "id": "17ac0bc7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Engineers have a plan for pushing down on the heat probe, which has been stuck at the Martian surface for a year.'"
+       "'Perseverance is one of a few Mars spacecraft carrying laser retroreflectors. The devices could provide new science and safer Mars landings in the future.'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "id": "f9d64f58",
    "metadata": {},
    "outputs": [],
@@ -166,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "id": "952fad80",
    "metadata": {},
    "outputs": [],
@@ -178,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "id": "9e833c57",
    "metadata": {},
    "outputs": [],
@@ -190,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "id": "7cd3bcd7",
    "metadata": {},
    "outputs": [
@@ -200,7 +198,7 @@
        "'image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "id": "ea850de1",
    "metadata": {},
    "outputs": [
@@ -223,7 +221,7 @@
        "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "id": "3651fad2",
    "metadata": {},
    "outputs": [
@@ -322,7 +320,7 @@
        "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "id": "2a2cf0ae",
    "metadata": {},
    "outputs": [
@@ -346,7 +344,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,12 +355,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "id": "bd1645ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "browser.quit()"
+    "#browser.quit()"
    ]
   },
   {
